Document com.sun.source.util.Plugin usage.